Implement Phase I observability ETL workbench

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# Demo account credentials
-CLIENT_ID=your_client_id
-CLIENT_SECRET=your_client_secret
-# Optional:
-REFRESH_TOKEN=your_refresh_token
-ACCOUNT_SERVER_URL=https://accounts.zoho.com
+DEMO_CLIENT_ID=demo-client
+DEMO_CLIENT_SECRET=demo-secret
+DEMO_REFRESH_TOKEN=demo-refresh-token
+DEMO_API_DOMAIN=https://api.example.com
