Add Azure OpenAI assistants for Phase 3 UI flows

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ DEMO_CLIENT_ID=demo-client
 DEMO_CLIENT_SECRET=demo-secret
 DEMO_REFRESH_TOKEN=demo-refresh-token
 DEMO_API_DOMAIN=https://api.example.com
+
+# Optional Azure OpenAI assistant configuration
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_DEPLOYMENT=
+AZURE_OPENAI_API_VERSION=
+# AZURE_OPENAI_ASSISTANT_ID=
